--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://anthonycastaneda.com/'
+baseURL = 'https://www.anthonycastaneda.com/'
 enableGitInfo = true
 languageCode = 'en-us'
 title = 'Anthony Castañeda'
